Initial commit. React Native Starter / Template.

--- a/app.json
+++ b/app.json
@@ -1,21 +1,10 @@
 {
   "expo": {
-    "name": "Kitten Tricks",
-    "slug": "kitten-tricks",
+    "name": "KittyApp",
+    "slug": "KittyApp",
     "version": "2.4.0",
     "sdkVersion": "36.0.0",
-    "description": "UI Kitten Demo Application",
-    "githubUrl": "https://github.com/akveo/kittenTricks",
-    "ios": {
-      "bundleIdentifier": "com.akveo.kittentricks",
-      "appStoreUrl": "https://itunes.apple.com/us/app/kitten-tricks/id1246143230",
-      "buildNumber": "3"
-    },
-    "android": {
-      "package": "com.akveo.kittenTricks",
-      "playStoreUrl": "https://play.google.com/store/apps/details?id=com.akveo.kittenTricks",
-      "versionCode": 3
-    },
+    "description": "React Native App",
     "privacy": "public",
     "platforms": [
       "ios",
